--- a/style.css
+++ b/style.css
@@ -1,28 +1,34 @@
 .container {
   font-family: fira Code;
+  text-align: center;
   max-width: 300;
-  margin: auto;
-  background-color: #D98E04;
+  margin: 0 auto;
+  background-color: #183B59;
   padding: 20px;
   border-radius: 10px;
 }
 
+
 input{
-  display: block;
-  width: 100%;
+  display: flex;
+  width: 700px; 
   padding: 5px;
   box-sizing: border-box;
   margin-bottom: 10px;
+  margin: 0 auto;
+  
 }
 
 h1{
   text-align: center;
   font-size: 50px;
+  color: white;
 }
 
 .botao {
-  width: 100%;
+  width: 700px;
   border: 0;
+  margin-top: 18px;
   line-height: 2.5;
   padding: 0 20px;
   font-size: 1rem;
@@ -37,6 +43,12 @@ h1{
                                     rgba(0, 0, 0, 0));
   box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
               inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.resultado {
+  text-align: center;
+  color: white;
+  
 }
 
 .styled:hover {
